--- a/src/stylesheets/utilities.scss
+++ b/src/stylesheets/utilities.scss
@@ -165,3 +165,8 @@ opacity: 1 !important;
  /* 调整图片高度以适应卡片 */
 }
 
+.storebg{
+background-image: url("../assets/img/storebg.png");
+background-repeat: no-repeat;
+background-size: cover;
+}
