--- a/src/stylesheets/all.scss
+++ b/src/stylesheets/all.scss
@@ -4,4 +4,5 @@
 @import 'swiper/css';
 @import 'swiper/css/pagination';
 @import "bootstrap/scss/bootstrap";
-@import "./utilities.scss"
+@import "./utilities.scss";
+@import "./cart.scss";
