--- a/src/stylesheets/utilities.scss
+++ b/src/stylesheets/utilities.scss
@@ -5,13 +5,7 @@
 .nav-bg{
     background-color: rgba(128, 128, 128);
 }
-.object-cover{
-    object-fit: cover;
-    height: 300px;
-}
-.object-fit-cover {
-    object-fit: cover;
-}
+
 .product-detail{ 
     img:hover {
         cursor: pointer;
@@ -49,133 +43,6 @@ input::placeholder {
   }
   
 
-// .checkout-steps {
-//   width: 100%;
-//     margin: auto;
-//     display: -webkit-flex;
-//     display: -moz-box;
-//     display: flex;
-//     -webkit-justify-content: space-between;
-//     -moz-box-pack: justify;
-//     justify-content: space-between;
-//     div:not(:first-child) > div:first-child:before {
-//       content: '';
-//       display: block;
-//       width: 178%;
-//       height: 1.2px;
-//       position: absolute;
-//       right: 100%;
-//       background: $primary;
-//       transform: translateY(-50%);
-//       z-index: -1;
-//     }
-//     .checkout-item {
-//       display: -webkit-flex;
-//       display: -moz-box;
-//       display: flex;
-//       -webkit-flex-direction: column;
-//       -moz-box-orient: vertical;
-//       -moz-box-direction: normal;
-//       flex-direction: column;
-//       -webkit-align-items: center;
-//       -moz-box-align: center;
-//       align-items: center;
-//       .checkout-item >div:first-child {
-//         //數字圈圈
-//         position: relative;
-//         width: 120px;
-//         height: 120px;
-//         border-radius: 50%;
-//         font-size: 14px;
-//         display: -webkit-flex;
-//         display: -moz-box;
-//         display: flex;
-//         -webkit-align-items: center;
-//         -moz-box-align: center;
-//         align-items: center;
-//         -webkit-justify-content: center;
-//         -moz-box-pack: center;
-//         justify-content: center;
-//         border-width: 1px;
-//         border-style: solid;
-//         z-index: 0;
-//       }
-//     }
-//     .checkout-done {
-//       div:first-child {
-//         color: #ffffff;
-//         border-color: $primary;
-//         background-color: $primary;
-//       }
-//     }
-//     .checkout-undone {
-//       div:first-child {
-//         color: $primary;
-//         border-color: $primary;
-//         background-color: #ffffff;
-//         opacity: 0.4;
-//       }
-//     }
-//   }
-
-.checkout-steps {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-
-  .checkout-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &:not(:last-child)::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 4%;
-      height: 1.2px;
-      background: $primary;
-      width: calc(100% - 60px); // 調整連接線的長度
-      transform: translateY(-50%);
-      z-index: 0;
-    }
-
-    > div:first-child {
-      // 數字圈圈
-      position: relative;
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-width: 1px;
-      border-style: solid;
-      z-index: 1; // 確保在連接線之上
-      background: #ffffff;
-    }
-  }
-
-  .checkout-done {
-    > div:first-child {
-      color: #ffffff;
-      border-color: $primary;
-      background-color: $primary;
-    }
-  }
-
-  .checkout-undone {
-    > div:first-child {
-      color: $primary;
-      border-color: $primary;
-      background-color: #ffffff;
-      opacity: 1;
-    }
-  }
-}
 
 
   hr.new1{
@@ -227,23 +94,6 @@ opacity: 1 !important;
   overflow: hidden;
   border-radius: 50%;
 }
-.home-img-container{
-  position: relative;
-  width: 100%;
-  padding-top: 100%; /* 1:1 Aspect Ratio */
-  overflow: hidden;
-  border-radius: 50%;
-  margin-bottom: 1rem;
-}
-.home-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-}
 
 .left-img {
   position: absolute;
@@ -254,6 +104,27 @@ opacity: 1 !important;
   object-fit: cover;
   border-radius: 50%;
 }
+
+.category-item {
+  text-align: center;
+  max-width: 200px; /* 设置每个项目的最大宽度 */
+}
+
+.category-image-wrapper {
+  width: 180px; /* 调整图片容器的大小 */
+  height: 180px; /* 调整图片容器的大小 */
+  overflow: hidden; /* 隐藏溢出部分，确保图片圆形 */
+  margin: auto; /* 居中图片 */
+}
+
+.category-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
 @media(max-width:992px){
   .tablePadding{
     padding: 60px 20px 60px 20px; 
