--- a/src/stylesheets/utilities.scss
+++ b/src/stylesheets/utilities.scss
@@ -26,7 +26,7 @@
 
 .product-img-text{
     background-color: #fff;
-    width: 488px;
+    width: 100%;
     height: 202px;
     border-radius: 50px;
     opacity: .7;
