--- a/src/stylesheets/_cart.scss
+++ b/src/stylesheets/_cart.scss
@@ -61,3 +61,9 @@
     height: 60px;
     object-fit: cover;
   }
+  .checkout-border{
+    border-left: 1px solid #AD8F7E;
+    border-right: 1px solid #AD8F7E; 
+    border-bottom: 1px solid #AD8F7E;
+    border-radius: 0 0 30px 30px;
+  }
